--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,11 @@ server.port = 9090
 
 
 # Connection url for the database "Local MySQL"
-spring.datasource.url = jdbc:mysql://localhost:3306/booking_api?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+spring.datasource.url = jdbc:mysql://localhost:3306/booking_api?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 1234
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
